--- a/StarTEDApp/Components/Layout/MainLayout.razor
+++ b/StarTEDApp/Components/Layout/MainLayout.razor
@@ -21,3 +21,7 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+<footer class="border-top mt-4 pt-3 text-center">
+    <div><b>A01 - Employees</b></div>
+    <div>Your FirstName Your LastName</div>
+</footer>
