--- a/StarTEDApp/Components/Layout/NavMenu.razor
+++ b/StarTEDApp/Components/Layout/NavMenu.razor
@@ -25,6 +25,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="a01-employees-query">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> A01 - Employees Query
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
