--- a/StarTEDApp/Components/Pages/Home.razor
+++ b/StarTEDApp/Components/Pages/Home.razor
@@ -5,3 +5,4 @@
 <h1>StarTED Project</h1>
 
 <h2>Deliverable Descriptions :</h2>
+In deliverable1, we did the Query component that allows the user to search for active employees using a partial name match on either the employee’s first or last name. 
